DOM - dom.js - Tests.

--- a/books/dom/dom.html
+++ b/books/dom/dom.html
@@ -6,6 +6,12 @@
         <title>Document</title>
     </head>
     <body>
+        <p>Open your developer tools...</p>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
         <script src="dom.js"></script>
         <script>
             console.log(dom());
@@ -16,6 +22,15 @@
             console.log(dom([document.body, document.body]));
             console.log(dom(document.body.children));
             console.log(dom(dom('body')));
+
+            console.log(dom('ul li:first-child').html('one'));
+            console.log(dom('ul li:first-child').html() === 'one');
+            console.log(dom('ul li:last-child').text('three'));
+            console.log(dom('ul li:last-child').text() === 'three');
+
+            console.log(dom('ul').append('<li>4</li>'));
+            console.log(dom('ul').append(document.createElement('li')));
+            console.log(dom('ul').append(dom('li:first-child')));
         </script>
     </body>
 </html>
